--- a/.github/workflows/sub_merge.yml
+++ b/.github/workflows/sub_merge.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
-    - cron: '25 */1 * * *'
+    - cron: '0 * * * *'
 
 jobs:
   deploy:
