--- a/ClashConfig.yaml
+++ b/ClashConfig.yaml
@@ -3,16 +3,16 @@
 # 或者运行目录下的config.yml
 #---------------------------------------------------#
 # 混合端口 HTTP和SOCKS5用一个端口
-mixed-port: 7890
+#mixed-port: 7890
 
 # HTTP 代理端口
-# port: 7890
+port: 7890
 
 # SOCKS5 代理端口
 socks-port: 7891
 
 # Linux 和 macOS 的 redir 代理端口 (如需使用此功能，请取消注释)
-# redir-port: 7892
+#redir-port: 7892
 
 # 允许局域网的连接（可用来共享代理）
 allow-lan: true
@@ -22,14 +22,14 @@ allow-lan: true
 # #192.168.122.11: 绑定单个IPv4地址
 # #"[aaaa::a8aa:ff:fe09:57d8]": 绑定单个IPv6地址
 bind-address: "*"
-ipv6: true
+ipv6: false
 
 # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
-# mode: rule
+mode: rule
 
 # 设置日志输出级别 (默认级别：silent，即不输出任何内容，以避免因日志内容过大而导致程序内存溢出）。
 # 5 个级别：silent / error / warning / info / debug。级别越高日志输出量越大，越倾向于调试，若需要请自行开启。
-log-level: info
+log-level: error
 
 # Clash 的 RESTful API
 external-controller: '127.0.0.1:9090'
@@ -61,6 +61,55 @@ experimental:
 #hosts:
 #   '*.clash.dev': 127.0.0.1
 #   'alpha.clash.dev': '::1'
+secret: 0
+redir-port: 7892
+dns:
+  enable: true
+  ipv6: false
+  listen: 0.0.0.0:8053
+  default-nameserver:
+    - 8.8.8.8
+  enhanced-mode: fake-ip
+  use-hosts: true
+  fake-ip-filter:
+    - '+.*'
+  nameserver:
+    - 223.5.5.5
+    - 114.114.114.114
+    - 119.29.29.29
+  fallback:
+    - tcp://8.8.8.8:53
+    - tcp://8.8.4.4:53
+    - tcp://208.67.222.222:443
+    - tcp://208.67.220.220:443
+    - https://dns.google/dns-query
+    - https://1.0.0.1/dns-query
+  fallback-filter:
+    geoip: true
+    geoip-code: CN
+    ipcidr:
+      - 240.0.0.0/4
+    domain:
+      - '+.google.com'
+      - '+.googleapis.com'
+      - '+.youtube.com'
+      - '+.appspot.com'
+      - '+.telegram.com'
+      - '+.facebook.com'
+      - '+.twitter.com'
+      - '+.blogger.com'
+      - '+.gmail.com'
+      - '+.gvt1.com'
+sniffer:
+  enable: true
+  override-destination: true
+  sniff:
+    http: {ports: [80, 8080]}
+    tls: {ports: [443, 8443]}
+  skip-domain:
+    - 'courier.push.apple.com'
+    - 'Mijia Cloud'
+external-ui: /opt/app/clash/clash_webs/
 
 #dns:
   #enable: true # 是否启用dns false
