--- a/.github/workflows/sub_merge.yml
+++ b/.github/workflows/sub_merge.yml
@@ -31,6 +31,7 @@ jobs:
     - name: 安装依赖
       run: |
         pip install --upgrade pip
+        pip install pyproject.toml
         pip install -r ./utils/requirements.txt
     - name: 执行任务
       # env:
